# Financial-Narrative

./: app.py  consistency_checker.py  database.py  db_init.py  financial_data.py  narrative_generator.py  pyproject.toml  pyvenv.cfg  utils.py  visualization.py
